--- a/packages/components/src/style.scss
+++ b/packages/components/src/style.scss
@@ -36,4 +36,5 @@
 @import "./textarea-control/style.scss";
 @import "./toggle-control/style.scss";
 @import "./toolbar/style.scss";
+@import "./toolbar-button/style.scss";
 @import "./tooltip/style.scss";
