--- a/packages/editor/src/style.scss
+++ b/packages/editor/src/style.scss
@@ -36,6 +36,7 @@
 @import "./components/post-title/style.scss";
 @import "./components/post-trash/style.scss";
 @import "./components/rich-text/core-tokens/image/style.scss";
+@import "./components/rich-text/format-controls/link/style.scss";
 @import "./components/rich-text/format-toolbar/style.scss";
 @import "./components/rich-text/style.scss";
 @import "./components/rich-text/tokens/ui/style.scss";
